<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rajesh.volleysample.activity.VolleyActivity"
    tools:showIn="@layout/activity_main">

        <Button
            android:id="@+id/btnGet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_request"
            android:textColor="@android:color/black"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="39dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/btnPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_request"
            android:textColor="@android:color/black"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:layout_alignBaseline="@+id/btnGet"
            android:layout_alignBottom="@+id/btnGet"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/btnJSONArray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:text="@string/get_jsonarray"
            android:textColor="@android:color/black"
            android:layout_below="@+id/btnGet"
            android:layout_alignRight="@+id/btnGet"
            android:layout_alignEnd="@+id/btnGet" />

        <Button
            android:id="@+id/btnString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_string"
            android:textColor="@android:color/black"
            android:layout_alignBaseline="@+id/btnJSONArray"
            android:layout_alignBottom="@+id/btnJSONArray"
            android:layout_alignLeft="@+id/btnPost"
            android:layout_alignStart="@+id/btnPost" />


        <Button
            android:id="@+id/btnLoadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_network_image"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:layout_alignTop="@+id/ivLoad"
            android:layout_alignLeft="@+id/btnJSONArray"
            android:layout_alignStart="@+id/btnJSONArray" />

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/ivLoad"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/placeholder"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/btnPost"
            android:layout_alignEnd="@+id/btnPost"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp" />


        <Button
            android:id="@+id/btnLoadImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imageview"
            android:textColor="@android:color/black"
            android:layout_marginTop="73dp"
            android:layout_below="@+id/ivLoad"
            android:layout_alignLeft="@+id/btnLoadImage"
            android:layout_alignStart="@+id/btnLoadImage" />

        <ImageView
            android:id="@+id/ivLoadImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/placeholder"
            android:layout_marginTop="52dp"
            android:layout_below="@+id/ivLoad"
            android:layout_alignLeft="@+id/ivLoad"
            android:layout_alignStart="@+id/ivLoad" />

</RelativeLayout>
